@@ -43,6 +43,7 @@ my $main_conf = {
             YT  => 0,
         },
         shipping => 10.00,
+        # shipping_free => 50.00,
 
         paypal        => $secret->{text}{paypal},
         paypal_custom => $secret->{text}{paypal_custom},
